<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/margin_8"
    android:background="@color/main_dark_background">

    <TextView
        android:id="@+id/tvSongNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/default_number_1"
        android:textAppearance="@style/SpartanBoldFontText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="@dimen/sp_11"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgSong"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="@dimen/margin_22"
        android:src="@drawable/img_avatar"
        app:layout_constraintStart_toEndOf="@id/tvSongNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:hint="@string/default_hint_song_name"
        android:textAppearance="@style/SpartanSemiBoldFontText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgSong"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_more"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_22"
        android:hint="@string/default_time_song"
        android:textAppearance="@style/SpartanSemiBoldFontText"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imgMore"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>