<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:paddingBottom="@dimen/margin_22"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_dark_background"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutTopBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_top_bar_home"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgAvatar"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginTop="@dimen/margin_42"
                    android:layout_marginEnd="@dimen/margin_22"
                    android:layout_marginBottom="@dimen/margin_27"
                    android:src="@drawable/img_avatar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvTopBarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_22"
                    android:hint="@string/hint_top_bar_title"
                    android:textAppearance="@style/SpartanSemiBoldFontText"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textSize="@dimen/sp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/imgAvatar" />

                <TextView
                    android:id="@+id/tvTopBarDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:text="@string/top_bar_description"
                    android:textAppearance="@style/SpartanSemiBoldFontText"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_11"
                    app:layout_constraintStart_toStartOf="@id/tvTopBarTitle"
                    app:layout_constraintTop_toBottomOf="@id/tvTopBarTitle" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tvRecommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_27"
                android:fontFamily="@font/spartan_extra_bold"
                android:text="@string/recommendations"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutTopBar" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRecommendations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvRecommendation"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_recommend" />

            <TextView
                android:id="@+id/tvRecentListenings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_36"
                android:text="@string/recent_listenings"
                android:textAppearance="@style/SpartanExtraBoldFontText"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvRecommendations" />

            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/rcvRecentSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_24"
                app:layout_constraintTop_toBottomOf="@id/tvRecentListenings"
                tools:itemCount="3"
                tools:listitem="@layout/item_song_image_time" />

            <TextView
                android:id="@+id/tvTopAlbums"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_36"
                android:text="@string/top_albums"
                android:textAppearance="@style/SpartanSemiBoldFontText"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rcvRecentSongs" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvTopAlbums"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_22"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/tvTopAlbums"
                tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_album" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>